@@ -22,6 +22,7 @@ Changed in ATK 6.2
 + The attributename and nodename are now available in the editform.tpl and viewform.tpl 
   templates. [Peter, Dennis]
 + Added support for dialog render mode for atkViewHandler and atkAdminHandler. [Peter]
+* Add atkAttrRowHidden style to steelblue theme. [Yury]
 * Don't display letter as bold, if it don't use as index. [Yury] 
 * Fix atkmlnumberattribute->validate method. (bug #883) [Yury]
 * Fix saving new password to db after "password forgotten". (bug #819) [Yury]
